# Python

./: .gitignore  01_variables_and_types.py  02_rps.py  03_lists_and_tuples.py  04_dictionaries_and_sets.py  README.md  install_extensions.sh  requirements_base.txt  reset_venv.sh  vscode_extensions_install.txt
bash_basics/: commands.md  experiments.sh  model_validation_creation.sh  project_creation.sh  warmup.sh
model_validation/: .env  CHANGELOG.md  CHANGELOG.txt  EXECUTIVE_SUMMARY.md  README.md  model_development_and_validation_flow.txt  pyproject.toml  requirements_dev.txt
model_validation/common/: setup.py  utils.py
model_validation/notebooks/: 01_end_to_end_model_validation.ipynb  02_training_and_validation_experiments.ipynb  dd.py  model_validation.ipynb
model_validation/notebooks/.ipynb_checkpoints/: model_validation-checkpoint.ipynb
model_validation/scripts/: generate_mock_data.py
model_validation/scripts/00_data/: 00data__01_generate_mock_data.py
model_validation/scripts/01_diagnostics/: 01_diag__00_overview.ipynb  01diag__01_logit_diagnostics.py  01diag__02_logit_deciles.py
model_validation/scripts/02_training/: 02train__01_train_model.py
model_validation/scripts/03_validation/: 03valid__01_validate_model.py
model_validation/scripts/05_monitoring/: README.md
model_validation/src/model_validation.egg-info/: PKG-INFO  SOURCES.txt
model_validation/src/model_validation/common/: setup.py
model_validation/src/model_validation/diagnostics/: logit_deciles.py
model_validation/src/model_validation/training/: train_model.py
(+4 files in other folders)
