[project]
name = "model_validation"
version = "0.1.0"
description = "Credit risk model development & validation pipeline"
requires-python = ">=3.9"
authors = [{name="Renee Bahman"}]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
